# computational_math

./: Cargo.toml
collabs/: lab1.ipynb  lab2.ipynb  lab3.ipynb  lab4.ipynb  lab5.ipynb  lab6.ipynb
src/lab1/task1/: main.rs
src/lab1/task2/: main.rs
src/lab1/task3/: main.rs
src/lab1/task4/: main.rs
src/lab3/task6_1/: main.rs
src/lab3/task6_2/: main.rs
src/lab5/: main.rs
src/lab6/: main.rs
src/libs/alg/: algr.rs  lab1.rs
src/libs/alg/lab1/: task4.rs
