[package]
name = "computational_math"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "algr"
path = "./src/libs/alg/algr.rs"

[[bin]]
name = "lab1_task1"
path = "./src/lab1/task1/main.rs"

[[bin]]
name = "lab1_task2"
path = "./src/lab1/task2/main.rs"

[[bin]]
name = "lab1_task3"
path = "./src/lab1/task3/main.rs"

[[bin]]
name = "lab1_task4"
path = "./src/lab1/task4/main.rs"

[[bin]]
name = "lab3_task6_1"
path = "./src/lab3/task6_1/main.rs"

[[bin]]
name = "lab3_task6_2"
path = "./src/lab3/task6_2/main.rs"